# FancyVideo-ComfyUI

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
diffusers011/pipelines/unclip/: pipeline_unclip.py  text_proj.py
fancyvideo/models/: motion_module.py  unet.py  unet_blocks.py
fancyvideo/models/ctgm/: attention.py  temporal_cross_module.py
fancyvideo/models/cv_vae/: modeling_vae.py  vae_models.py
fancyvideo/pipelines/: fancyvideo_infer_pipeline.py  pipeline_animation_vae_2d.py  pipeline_animation_vae_3d.py
fancyvideo/utils/: convert_from_ckpt.py  convert_lora_safetensor_to_diffusers.py
web/js/: previewVideo.js
